Added remote services

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
 	"private": true,
 	"dependencies": {
 		"@rizing/cds-extension": "^0.6.1",
+		"@sap-cloud-sdk/http-client": "^2.11.0",
 		"@sap/cds": "^6",
 		"express": "^4"
 	},
 	"devDependencies": {
+		"dotenv": "^16.0.3",
 		"sqlite3": "^5.0.4"
 	},
 	"scripts": {
@@ -42,6 +44,54 @@
 		"rules": {
 			"no-console": "off",
 			"require-atomic-updates": "off"
+		}
+	},
+	"cds": {
+		"requires": {
+			"API_EQUIPMENT": {
+				"kind": "odata-v2",
+				"model": "srv/external/API_EQUIPMENT",
+				"[backend]": {
+					"credentials": {
+						"url": "{{s4h_hostname}}/sap/opu/odata/sap/API_EQUIPMENT",
+						"username": "{{s4h_username}}",
+						"password": "{{s4h_password}}"
+					}
+				}
+			},
+			"API_MAINTNOTIFICATION": {
+				"kind": "odata-v2",
+				"model": "srv/external/API_MAINTNOTIFICATION",
+				"[backend]": {
+					"credentials": {
+						"url": "{{s4h_hostname}}/sap/opu/odata/sap/API_MAINTNOTIFICATION",
+						"username": "{{s4h_username}}",
+						"password": "{{s4h_password}}"
+					}
+				}
+			},
+			"API_FUNCTIONALLOCATION": {
+				"kind": "odata-v2",
+				"model": "srv/external/API_FUNCTIONALLOCATION",
+				"[backend]": {
+					"credentials": {
+						"url": "{{s4h_hostname}}/sap/opu/odata/sap/API_FUNCTIONALLOCATION",
+						"username": "{{s4h_username}}",
+						"password": "{{s4h_password}}"
+					}
+				}
+			},
+			"API_COMPANYCODE_SRV": {
+				"kind": "odata-v2",
+				"model": "srv/external/API_COMPANYCODE_SRV",
+				"[backend]": {
+					"credentials": {
+						"url": "{{s4h_hostname}}/sap/opu/odata/sap/API_COMPANYCODE_SRV",
+						"username": "{{s4h_username}}",
+						"password": "{{s4h_password}}"
+					}
+				}
+			}
 		}
 	}
 }
