--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "UNLICENSED",
 	"private": true,
 	"dependencies": {
-		"@rizing/cds-extension": "^0.6.3",
+		"@rizing/cds-extension": "^0.6.5",
 		"@sap-cloud-sdk/http-client": "^2.11.0",
 		"@sap/cds": "^6",
 		"express": "^4"
@@ -18,6 +18,7 @@
 	},
 	"scripts": {
 		"start": "cds run",
+		"bump": "npm i @rizing/cds-extension@latest",
 		"watch-notification": "cds watch --open notification/webapp/index.html?sap-ui-xx-viewCache=false"
 	},
 	"engines": {
