Added Functional Location filter

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -1,6 +1,14 @@
+#XMSG
+functionalLocationName=Functional Location Name
 
 #XMSG
-companyCode=Company
+id=ID
+
+#XMSG
+company=Company
+
+#XMSG
+companyCode=Company Code
 
 #XMSG
 creationDate=Creation Date
@@ -20,9 +28,6 @@ maintenanceNotification=Maintenance Notification
 
 #XMSG
 maintenanceNotifications=Maintenance Notifications
-
-#XMSG
-notificationText=Notification Text
 
 #XMSG
 notificationType=Notification Type
