Added Items and Partners table

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -1,4 +1,13 @@
 #XMSG
+damage=Damage
+
+#XMSG
+damageGroup=Damage Group
+
+#XMSG
+description=Description
+
+#XMSG
 functionalLocationName=Functional Location Name
 
 #XMSG
@@ -20,6 +29,12 @@ functionalLocation=Functional Location
 generalInformation=General Information
 
 #XMSG
+item=Item
+
+#XMSG
+items=Items
+
+#XMSG
 lastChangeDate=Last Change Date
 
 #XMSG
@@ -32,6 +47,20 @@ maintenanceNotifications=Maintenance Notifications
 #XMSG
 notificationType=Notification Type
 
+#XMSG
+part=Part
+
+#XMSG
+partGroup=Part Group
+
+#XMSG
+partner=Partner
+
+#XMSG
+partnerFunction=Partner Function
+
+#XMSG
+partners=Partners
 
 #XMSG
 reportedByUser=Reported By User
