Added 2nd Object Page for Activities and Causes

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -1,4 +1,22 @@
 #XMSG
+activities=Activities
+
+#XMSG
+activity=Activity
+
+#XMSG
+activityGroup=Activity Group
+
+#XMSG
+cause=Cause
+
+#XMSG
+causeGroup=Cause Group
+
+#XMSG
+causes=Causes
+
+#XMSG
 damage=Damage
 
 #XMSG
@@ -6,6 +24,9 @@ damageGroup=Damage Group
 
 #XMSG
 description=Description
+
+#XMSG
+endDate=End Date
 
 #XMSG
 functionalLocationName=Functional Location Name
@@ -48,6 +69,9 @@ maintenanceNotifications=Maintenance Notifications
 notificationType=Notification Type
 
 #XMSG
+number=No.
+
+#XMSG
 part=Part
 
 #XMSG
@@ -68,4 +92,12 @@ reportedByUser=Reported By User
 
 #XMSG
 reporterFullName=Reporter Full Name
+
+
+#XMSG
+rootCause=Root Cause
+
+
+#XMSG
+startDate=Start Date
 
